--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-  <title>Pesquisa Renova Be - DEBUG</title>
+  <title>Pesquisa Renova Be </title>
 
   <!-- Google Analytics 4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WG5TKP744Z"></script>
@@ -521,7 +521,7 @@
     <img src="https://i.ibb.co/chSdvTzv/Captura-de-tela-2025-08-07-092118.png" alt="Renova Be" />
   </header>
 
-  <h1>Pesquisa de Satisfação Renova Be - DEBUG</h1>
+  <h1>Pesquisa de Satisfação Assinaturas Renova Be </h1>
 
   <div class="form-container">
     <div class="welcome-message">
@@ -991,3 +991,4 @@
   </script>
 </body>
 </html> 
+
