--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     <img src="https://i.ibb.co/chSdvTzv/Captura-de-tela-2025-08-07-092118.png" alt="Renova Be" />
   </header>
 
-  <h1>Pesquisa de Satisfação Assinaturas Renova Be</h1>
+  <h1>Pesquisa de Satisfação Renova Be</h1>
 
   <div class="form-container">
     <div class="welcome-message">
