--- a/index.html
+++ b/index.html
@@ -33,65 +33,50 @@
 
       console.log('🔄 Enviando dados para Google Sheets:', data);
 
-      // 1) Tenta sendBeacon (melhor para mobile/background)
+      // 1) Beacon: manda via QUERY (?data=...) — sem corpo, 100% chega no e.parameter
       try {
         if (navigator.sendBeacon) {
-          const ok = navigator.sendBeacon(url, new Blob([json], { type: 'application/json' }));
+          const ok = navigator.sendBeacon(url + '?data=' + encodeURIComponent(json));
           if (ok) {
-            console.log('✅ Enviado via sendBeacon');
+            console.log('✅ Enviado via sendBeacon (?data=...)');
             showNotification('Dados salvos com sucesso!', 'success');
-            setTimeout(showThankYou, 1500);
+            setTimeout(showThankYou, 1200);
             return;
           }
         }
-      } catch (e) {
-        console.warn('sendBeacon falhou:', e);
+      } catch (e) { 
+        console.warn('sendBeacon falhou:', e); 
       }
 
-      // 2) Tenta fetch com keepalive (não bloqueia ao sair da página)
+      // 2) fetch: usa application/x-www-form-urlencoded (simple request, sem preflight, corpo não é descartado)
       try {
+        const body = 'data=' + encodeURIComponent(json);
         fetch(url, {
           method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: json,
-          keepalive: true,    // chave para mobile
-          // IMPORTANTE: não use 'cors' + leia resposta; Apps Script aceita e nós não precisamos ler a resposta
-          mode: 'no-cors'     // evita CORS chato; requisição chega lá, só não teremos response legível
+          headers: { 'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8' },
+          body,
+          keepalive: true,
+          mode: 'no-cors' // não precisamos ler a resposta
         }).then(() => {
-          console.log('✅ Enviado via fetch keepalive');
+          console.log('✅ Enviado via fetch urlencoded');
           showNotification('Dados salvos com sucesso!', 'success');
-          setTimeout(showThankYou, 1500);
+          setTimeout(showThankYou, 1200);
         }).catch(err => {
-          console.warn('fetch falhou, caindo no fallback:', err);
-          iframeFallback(json, url);
+          console.warn('fetch falhou, fallback iframe:', err);
+          iframeFallback(body, url);
         });
         return;
       } catch (e) {
-        console.warn('fetch lançou exceção, caindo no fallback:', e);
+        console.warn('fetch lançou exceção, fallback iframe:', e);
       }
 
-      // 3) Fallback: form + iframe (último recurso)
-      iframeFallback(json, url);
+      // 3) fallback: form + iframe (também urlencoded)
+      iframeFallback('data=' + encodeURIComponent(json), url);
     }
 
-    function iframeFallback(json, url) {
+    function iframeFallback(formBody, url) {
       try {
         console.log('↩️ Fallback: form + iframe');
-
-        const form = document.createElement('form');
-        form.method = 'POST';
-        form.action = url;
-        form.target = 'hidden-iframe';
-        form.style.display = 'none';
-
-        // Campo "data" como application/x-www-form-urlencoded
-        const dataInput = document.createElement('input');
-        dataInput.type = 'hidden';
-        dataInput.name = 'data';
-        dataInput.value = json;
-        form.appendChild(dataInput);
-
-        // Garante que o iframe exista antes do submit
         let iframe = document.querySelector('iframe[name="hidden-iframe"]');
         if (!iframe) {
           iframe = document.createElement('iframe');
@@ -99,18 +84,27 @@
           iframe.style.display = 'none';
           document.body.appendChild(iframe);
         }
+        const form = document.createElement('form');
+        form.method = 'POST';
+        form.action = url;
+        form.target = 'hidden-iframe';
+        form.style.display = 'none';
+
+        // cria input "data" do urlencoded
+        const input = document.createElement('input');
+        input.type = 'hidden';
+        input.name = 'data';
+        // formBody é "data=...", mas pro <form> precisamos só do valor:
+        input.value = decodeURIComponent(formBody.split('=')[1]);
+        form.appendChild(input);
 
         document.body.appendChild(form);
         form.submit();
 
-        console.log('✅ Formulário enviado via iframe');
+        console.log('✅ Enviado via iframe');
         showNotification('Dados salvos com sucesso!', 'success');
-        setTimeout(showThankYou, 1500);
-
-        setTimeout(() => {
-          form.remove();
-          // não precisa remover o iframe se você quiser reutilizar em outros envios
-        }, 8000);
+        setTimeout(showThankYou, 1200);
+        setTimeout(() => form.remove(), 8000);
       } catch (error) {
         console.error('❌ Erro no fallback iframe:', error);
         showNotification('Erro ao enviar dados. Tente novamente.', 'error');
