--- a/index.html
+++ b/index.html
@@ -564,9 +564,56 @@
       <input type="tel" class="text-input" placeholder="(00) 00000-0000">
     </div>
 
-    <!-- Pergunta 4 -->
+    <!-- Pergunta 4 (antiga pergunta 8) -->
     <div class="question" data-question="4">
-      <h3>4. Qual é o seu gênero? *</h3>
+      <h3>4. Quais foram os motivos que fizeram você cancelar sua assinatura da Renova Be? *</h3>
+      <div class="options">
+        <div class="option" data-value="Atraso no envio dos produtos">
+          <div class="option-number">1</div>
+          <span>Atraso no envio dos produtos</span>
+        </div>
+        <div class="option" data-value="Avarias nas embalagens">
+          <div class="option-number">2</div>
+          <span>Avarias nas embalagens</span>
+        </div>
+        <div class="option" data-value="Falta de atendimento do suporte">
+          <div class="option-number">3</div>
+          <span>Falta de atendimento do suporte</span>
+        </div>
+        <div class="option" data-value="Falta de outras opções de pagamento">
+          <div class="option-number">4</div>
+          <span>Falta de outras opções de pagamento</span>
+        </div>
+        <div class="option" data-value="Falta de possibilidade de escolher sabores">
+          <div class="option-number">5</div>
+          <span>Falta de possibilidade de escolher sabores</span>
+        </div>
+        <div class="option" data-value="Informações incorretas/ incompletas">
+          <div class="option-number">6</div>
+          <span>Informações incorretas/ incompletas</span>
+        </div>
+        <div class="option" data-value="Possuia mais de uma assinatura">
+          <div class="option-number">7</div>
+          <span>Possuia mais de uma assinatura</span>
+        </div>
+        <div class="option" data-value="Quantidade insuficiente para o mês">
+          <div class="option-number">8</div>
+          <span>Quantidade insuficiente para o mês</span>
+        </div>
+        <div class="option" data-value="Uso do limite do cartão de crédito">
+          <div class="option-number">9</div>
+          <span>Uso do limite do cartão de crédito</span>
+        </div>
+        <div class="option" data-value="Valor da assinatura muito alto">
+          <div class="option-number">10</div>
+          <span>Valor da assinatura muito alto</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Pergunta 5 (antiga pergunta 4) -->
+    <div class="question" data-question="5">
+      <h3>5. Qual é o seu gênero? *</h3>
       <div class="options">
         <div class="option" data-value="Feminino">
           <div class="option-number">1</div>
@@ -587,9 +634,9 @@
       </div>
     </div>
 
-    <!-- Pergunta 5 -->
-    <div class="question" data-question="5">
-      <h3>5. Qual é sua faixa etária? *</h3>
+    <!-- Pergunta 6 (antiga pergunta 5) -->
+    <div class="question" data-question="6">
+      <h3>6. Qual é sua faixa etária? *</h3>
       <div class="options">
         <div class="option" data-value="Entre 18-30 anos">
           <div class="option-number">1</div>
@@ -610,9 +657,9 @@
       </div>
     </div>
 
-    <!-- Pergunta 6 -->
-    <div class="question" data-question="6">
-      <h3>6. Em quais desses perfis você se enquadra atualmente? *</h3>
+    <!-- Pergunta 7 (antiga pergunta 6) -->
+    <div class="question" data-question="7">
+      <h3>7. Em quais desses perfis você se enquadra atualmente? *</h3>
       <div class="options">
         <div class="option" data-value="Cônjuge acompanhado a rotina do(a) parceiro(a)">
           <div class="option-number">1</div>
@@ -645,9 +692,9 @@
       </div>
     </div>
 
-    <!-- Pergunta 7 -->
-    <div class="question" data-question="7">
-      <h3>7. Quais produtos você mais se interessa na Renova Be *</h3>
+    <!-- Pergunta 8 (antiga pergunta 7) -->
+    <div class="question" data-question="8">
+      <h3>8. Quais produtos você mais se interessa na Renova Be *</h3>
       <div class="options">
         <div class="option" data-value="Colágeno Verisol® Frutado">
           <div class="option-number">1</div>
@@ -712,53 +759,6 @@
         <div class="option" data-value="Whey Protein">
           <div class="option-number">16</div>
           <span>Whey Protein</span>
-        </div>
-      </div>
-    </div>
-
-    <!-- Pergunta 8 -->
-    <div class="question" data-question="8">
-      <h3>8. Quais foram os motivos que fizeram você cancelar sua assinatura da Renova Be? *</h3>
-      <div class="options">
-        <div class="option" data-value="Atraso no envio dos produtos">
-          <div class="option-number">1</div>
-          <span>Atraso no envio dos produtos</span>
-        </div>
-        <div class="option" data-value="Avarias nas embalagens">
-          <div class="option-number">2</div>
-          <span>Avarias nas embalagens</span>
-        </div>
-        <div class="option" data-value="Falta de atendimento do suporte">
-          <div class="option-number">3</div>
-          <span>Falta de atendimento do suporte</span>
-        </div>
-        <div class="option" data-value="Falta de outras opções de pagamento">
-          <div class="option-number">4</div>
-          <span>Falta de outras opções de pagamento</span>
-        </div>
-        <div class="option" data-value="Falta de possibilidade de escolher sabores">
-          <div class="option-number">5</div>
-          <span>Falta de possibilidade de escolher sabores</span>
-        </div>
-        <div class="option" data-value="Informações incorretas/ incompletas">
-          <div class="option-number">6</div>
-          <span>Informações incorretas/ incompletas</span>
-        </div>
-        <div class="option" data-value="Possuia mais de uma assinatura">
-          <div class="option-number">7</div>
-          <span>Possuia mais de uma assinatura</span>
-        </div>
-        <div class="option" data-value="Quantidade insuficiente para o mês">
-          <div class="option-number">8</div>
-          <span>Quantidade insuficiente para o mês</span>
-        </div>
-        <div class="option" data-value="Uso do limite do cartão de crédito">
-          <div class="option-number">9</div>
-          <span>Uso do limite do cartão de crédito</span>
-        </div>
-        <div class="option" data-value="Valor da assinatura muito alto">
-          <div class="option-number">10</div>
-          <span>Valor da assinatura muito alto</span>
         </div>
       </div>
     </div>
@@ -848,11 +848,11 @@
         1: "Nome",
         2: "Email",
         3: "Confirmação Whatsapp",
-        4: "Qual é o seu gênero?",
-        5: "Qual é sua faixa etária?",
-        6: "Em quais desses perfis você se enquadra atualmente?",
-        7: "Quais produtos você mais se interessa na Renova Be",
-        8: "Quais foram os motivos que fizeram você cancelar sua assinatura da Renova Be?",
+        4: "Quais foram os motivos que fizeram você cancelar sua assinatura da Renova Be?",
+        5: "Qual é o seu gênero?",
+        6: "Qual é sua faixa etária?",
+        7: "Em quais desses perfis você se enquadra atualmente?",
+        8: "Quais produtos você mais se interessa na Renova Be",
         9: "Quais sugestões você recomendaria à Renova Be que faria você repensar em retomar sua assinatura?",
         10: "Em uma escala de 1 a 5, o quanto você recomendaria a Renova Be para seus familiares e amigos?"
       };
